# BookingSystemArchive

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
booking_system_types/: Cargo.toml
booking_system_types/src/: booking.rs  lib.rs  user.rs
flutter/booking_system/: README.md  pubspec.yaml
flutter/booking_system/android/app/: build.gradle
flutter/booking_system/android/app/src/debug/: AndroidManifest.xml
flutter/booking_system/android/app/src/main/kotlin/com/example/booking_system/: MainActivity.kt
flutter/booking_system/linux/: CMakeLists.txt
flutter/booking_system/macos/Runner.xcodeproj/: project.pbxproj
flutter/booking_system/web/: manifest.json
flutter/booking_system/windows/runner/: Runner.rc
legacy/booking_system/android/app/src/main/: AndroidManifest.xml
legacy/booking_system/ios/Runner/: Info.plist
legacy/booking_system/ios/Runner.xcodeproj/: project.pbxproj
legacy/booking_system/lib/: main.dart
legacy/booking_system/linux/: my_application.cc
legacy/booking_system/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
legacy/booking_system/macos/Runner/Configs/: AppInfo.xcconfig
legacy/booking_system/test/: widget_test.dart
legacy/booking_system/web/: index.html
legacy/booking_system/windows/: CMakeLists.txt
legacy/booking_system/windows/runner/: main.cpp
legacy/src/: booking.rs  database_commands.rs  init_database.rs
server/: Cargo.toml
server/src/: main.rs  postgres_commands.rs
src/: booking.rs  database_commands.rs  main.rs  user.rs
