[package]
name = "BookingSystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.4"
stylist = { version = "0.12.0", features = ["yew", "yew_integration"] }
yew = { version = "0.20.0", features = ["csr"] }
