[package]
name = "BookingSystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
email_address = "0.2.4"
postgres = { version = "0.19.4", features = ["with-chrono-0_4", "with-uuid-1"] }
postgrest = "1.5.0"
sha256 = "1.1.2"
stylist = { version = "0.12.0", features = ["yew", "yew_integration"] }
uuid = { version = "1.3.0", features = ["fast-rng", "v4"]}
yew = { version = "0.20.0", features = ["csr"] }
