[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
chrono = "0.4.23"
email_address = "0.2.4"
postgres = { version = "0.19.4", features = ["with-chrono-0_4", "with-uuid-1"] }
uuid = { version = "1.3.0", features = ["fast-rng", "v4"]}
booking_system_types = { path = "../booking_system_types" }
tokio = { version = "1.26.0", features = ["full"] }
reqwest = "0.11.15"
futures = "0.3.27"
